# project-template-simple

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  pyproject.toml
src/: __init__.py
tests/: test_example.py
